--- a/public/500.html
+++ b/public/500.html
@@ -4,63 +4,43 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    body {
+      background-color: #fff;
+      color: #2E2F30;
+      text-align: center;
+      font-family: arial, sans-serif;
+      margin: 0;
+    }
+    h1{
+      font-size: 75px;
+      margin: 16px;
+      color: #654f3f;
+      font-family: monospace;
+      font-weight: bolder;
+    }
+    .error{
+      width: 70%;
+      margin: 65px auto;
+    }
+    .btn-back{
+      font-size: 23px;
+      padding: 16px;
+      font-family: monospace;
+      font-weight: bold;
+      background-color: #654f3f;
+      color: #fff;
+      border-radius: 8px;
+      border: none;
+    }
   </style>
 </head>
 
 <body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
+<!-- This file lives in public/404.html -->
+<div class="error">
+  <img src="https://ib-media.s3.amazonaws.com/images/noResult.png" />
+  <h1>500 - Internal Error</h1>
+  <button class="btn-back">Back to WE-TRIP Homepage</button>
+</div>
 </body>
 </html>
